k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-project
  labels:
    app: pet-project
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pet-project
  template:
    metadata:
      labels:
        app: pet-project
    spec:
      containers:
        - name: pet-project
          image: dmitriyzo/pet-project:1.0.0
          ports:
            - containerPort: 8080
