k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pet-project
spec:
  selector:
    app: pet-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
